--- a/font-createLinearGradient.html
+++ b/font-createLinearGradient.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>文本字体渲染</title>
+		<title>文本字体渐变</title>
 	</head>
 	<body>
 		<canvas id="canvas" style="border: 1px solid #999; margin: 50px auto; display: block;">
@@ -13,13 +13,15 @@
 			canvas.width = 800;
 			canvas.height = 800;
 			var context = canvas.getContext("2d");
-			context.font = "900 70px Arial";
-			context.fillStyle = "#058";
-			context.fillText("Hello, world!", 100, 200, 400/*optional*/);
-		
-			context.lineWidth = 2;
-			context.strokeStyle = "#058";
-			context.strokeText("Hello, world!", 100, 400, 400/*optional*/);
+			var clg = context.createLinearGradient(0,0,800,0);
+			clg.addColorStop(0.25, "red");
+			clg.addColorStop(0.5, "orange");
+			clg.addColorStop(0.75, "yellow");
+			clg.addColorStop(1, "green");
+			context.lineWidth = 5;
+			context.font = "40px bold Arial";
+			context.fillStyle = clg;
+			context.fillText("Study canvas is fun!", 100, 300);
 		</script>
 	</body>
 </html>
